fix (restructure names to use padding instead of columns for overlap - same position on all screen sizes)

--- a/client/src/features/hero/HeroStylesheet.scss
+++ b/client/src/features/hero/HeroStylesheet.scss
@@ -64,10 +64,18 @@
 }
 
 .lastName {
-  margin-top: -25px;
+  margin-top: -25px !important;
 }
 
 .heroHeader {
 	font-family: 'Quarto';
 	letter-spacing: 0.075em;
+}
+
+.padLeft{
+  padding-left: 63px;
+}
+
+.padRight{
+  padding-right: 65px;
 }
